// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gamedata verify ignore list should empty a check whose subtree is ignored 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [meshes]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -meshes",
    "",
    "Verify meshes:",
    "Verified gamedata meshes in <duration>, 1/1 shader libraries valid, 205 blender definitions; 0/0 meshes valid",
    "",
    "Project gamedata is valid",
    "Gamedata project verified in <duration>",
  ],
}
`;

exports[`gamedata verify ignore list should empty the LTX check when the configs directory is ignored 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [configs]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -ltx",
    "",
    "Verify LTX files",
    "Verify LTX files formatting",
    "Checking 0 file(s)",
    "All 0 files are formatted, checked in <duration>",
    "Verify LTX schemas",
    "Verify path: <resources>/gamedata/configs",
    "Checked 0 files, 0 sections in <duration>",
    "No LTX sections were verified",
    "Found 0 error(s)",
    "Verified gamedata ltx files in <duration>",
    "",
    "Project gamedata is valid",
    "Gamedata project verified in <duration>",
  ],
}
`;

exports[`gamedata verify ignore list should ignore a prefix that matches nothing 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Format issues with 7/7 files in <duration>",
    "",
    "Project gamedata is invalid",
    "- 0/7 LTX files formatted; 0/32 sections valid",
    "  - [ltx] <resources>/gamedata/configs/alife.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/defines.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/evaluation.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/fonts.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/game.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/misc/inventory_icons.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/system.ltx: LTX file needs formatting",
    "Gamedata project checked in <duration>",
    "Check failed: 7 finding(s)",
  ],
  "stdout": [
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [nonexistent]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -ltx",
    "",
    "Verify LTX files",
    "Verify LTX files formatting",
    "Checking 7 file(s)",
    "Not formatted: <resources>/gamedata/configs/alife.ltx",
    "Not formatted: <resources>/gamedata/configs/defines.ltx",
    "Not formatted: <resources>/gamedata/configs/evaluation.ltx",
    "Not formatted: <resources>/gamedata/configs/fonts.ltx",
    "Not formatted: <resources>/gamedata/configs/game.ltx",
    "Not formatted: <resources>/gamedata/configs/misc/inventory_icons.ltx",
    "Not formatted: <resources>/gamedata/configs/system.ltx",
    "Verify LTX schemas",
    "Verify path: <resources>/gamedata/configs",
    "Checked 7 files, 32 sections in <duration>",
    "Verified 0.00%, 2 files, 0 sections, 0 fields",
    "Found 0 error(s)",
    "Verified gamedata ltx files in <duration>",
  ],
}
`;

exports[`gamedata verify ignore list should leave a check alone when the prefix names another subtree 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Format issues with 7/7 files in <duration>",
    "",
    "Project gamedata is invalid",
    "- 0/7 LTX files formatted; 0/32 sections valid",
    "  - [ltx] <resources>/gamedata/configs/alife.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/defines.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/evaluation.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/fonts.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/game.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/misc/inventory_icons.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/system.ltx: LTX file needs formatting",
    "Gamedata project checked in <duration>",
    "Check failed: 7 finding(s)",
  ],
  "stdout": [
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [meshes/ogf]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -ltx",
    "",
    "Verify LTX files",
    "Verify LTX files formatting",
    "Checking 7 file(s)",
    "Not formatted: <resources>/gamedata/configs/alife.ltx",
    "Not formatted: <resources>/gamedata/configs/defines.ltx",
    "Not formatted: <resources>/gamedata/configs/evaluation.ltx",
    "Not formatted: <resources>/gamedata/configs/fonts.ltx",
    "Not formatted: <resources>/gamedata/configs/game.ltx",
    "Not formatted: <resources>/gamedata/configs/misc/inventory_icons.ltx",
    "Not formatted: <resources>/gamedata/configs/system.ltx",
    "Verify LTX schemas",
    "Verify path: <resources>/gamedata/configs",
    "Checked 7 files, 32 sections in <duration>",
    "Verified 0.00%, 2 files, 0 sections, 0 fields",
    "Found 0 error(s)",
    "Verified gamedata ltx files in <duration>",
  ],
}
`;

exports[`gamedata verify ignore list should narrow a check to the unignored part of a subtree 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Format issues with 6/6 files in <duration>",
    "",
    "Project gamedata is invalid",
    "- 0/6 LTX files formatted; 0/27 sections valid",
    "  - [ltx] <resources>/gamedata/configs/alife.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/defines.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/evaluation.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/fonts.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/game.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/system.ltx: LTX file needs formatting",
    "Gamedata project checked in <duration>",
    "Check failed: 6 finding(s)",
  ],
  "stdout": [
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [configs/misc]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -ltx",
    "",
    "Verify LTX files",
    "Verify LTX files formatting",
    "Checking 6 file(s)",
    "Not formatted: <resources>/gamedata/configs/alife.ltx",
    "Not formatted: <resources>/gamedata/configs/defines.ltx",
    "Not formatted: <resources>/gamedata/configs/evaluation.ltx",
    "Not formatted: <resources>/gamedata/configs/fonts.ltx",
    "Not formatted: <resources>/gamedata/configs/game.ltx",
    "Not formatted: <resources>/gamedata/configs/system.ltx",
    "Verify LTX schemas",
    "Verify path: <resources>/gamedata/configs",
    "Checked 6 files, 27 sections in <duration>",
    "Verified 0.00%, 2 files, 0 sections, 0 fields",
    "Found 0 error(s)",
    "Verified gamedata ltx files in <duration>",
  ],
}
`;

exports[`gamedata verify ignore list should narrow the LTX check when only system.ltx is ignored 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Format issues with 6/6 files in <duration>",
    "",
    "Project gamedata is invalid",
    "- 0/6 LTX files formatted; 0/32 sections valid",
    "  - [ltx] <resources>/gamedata/configs/alife.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/defines.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/evaluation.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/fonts.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/game.ltx: LTX file needs formatting",
    "  - [ltx] <resources>/gamedata/configs/misc/inventory_icons.ltx: LTX file needs formatting",
    "Gamedata project checked in <duration>",
    "Check failed: 6 finding(s)",
  ],
  "stdout": [
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [configs/system.ltx]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -ltx",
    "",
    "Verify LTX files",
    "Verify LTX files formatting",
    "Checking 6 file(s)",
    "Not formatted: <resources>/gamedata/configs/alife.ltx",
    "Not formatted: <resources>/gamedata/configs/defines.ltx",
    "Not formatted: <resources>/gamedata/configs/evaluation.ltx",
    "Not formatted: <resources>/gamedata/configs/fonts.ltx",
    "Not formatted: <resources>/gamedata/configs/game.ltx",
    "Not formatted: <resources>/gamedata/configs/misc/inventory_icons.ltx",
    "Verify LTX schemas",
    "Verify path: <resources>/gamedata/configs",
    "Checked 6 files, 32 sections in <duration>",
    "Verified 0.00%, 6 files, 0 sections, 0 fields",
    "Found 0 error(s)",
    "Verified gamedata ltx files in <duration>",
  ],
}
`;

exports[`gamedata verify ignore list should run a check that never reads the ignored prefix 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Cannot read OGF texture: wpn\\wpn_bolt",
    "Mesh motion refs not found by path: dynamics\\devices\\dev_bolt\\dev_bolt_hud_animation",
    "Mesh is not valid: meshes\\ogf\\dev_bolt_hud.ogf",
    "Cannot read OGF texture: item\\item_notes",
    "Mesh is not valid: meshes\\ogf\\notes_paper_1.ogf",
    "Cannot read OGF texture: glow\\glow_ghost",
    "Mesh is not valid: meshes\\ogf\\part_none.ogf",
    "Cannot read OGF texture: wpn\\wpn_pm",
    "Mesh is not valid: meshes\\ogf\\wpn_pm_lod.ogf",
    "",
    "Project gamedata is invalid",
    "- 1/1 shader libraries valid, 205 blender definitions; 0/4 meshes valid",
    "  - [meshes] meshes/ogf/dev_bolt_hud.ogf: Mesh references missing motion 'dynamics\\devices\\dev_bolt\\dev_bolt_hud_animation'",
    "  - [meshes] meshes/ogf/dev_bolt_hud.ogf: Mesh references missing texture 'wpn\\wpn_bolt'",
    "  - [meshes] meshes/ogf/notes_paper_1.ogf: Mesh references missing texture 'item\\item_notes'",
    "  - [meshes] meshes/ogf/part_none.ogf: Mesh references missing texture 'glow\\glow_ghost'",
    "  - [meshes] meshes/ogf/wpn_pm_lod.ogf: Mesh references missing texture 'wpn\\wpn_pm'",
    "Gamedata project checked in <duration>",
    "Check failed: 5 finding(s)",
  ],
  "stdout": [
    "Opening gamedata project",
    "Root: <resources>/gamedata, ignored: [configs]",
    "Verifying gamedata project: <resources>/gamedata",
    "Verifying modules:",
    "  -meshes",
    "",
    "Verify meshes:",
    "Verified gamedata meshes in <duration>, 1/1 shader libraries valid, 205 blender definitions; 0/4 meshes valid",
  ],
}
`;

exports[`gamedata verify ignore list should write nothing 1`] = `[]`;
